<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Languages">
        <ListPreference
            app:defaultValue="English"
            app:entries="@array/languages"
            app:entryValues="@array/languages_values"
            app:key="language"
            app:title="Choose language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Details">
        <SwitchPreferenceCompat
            app:key="edit_details"
            app:title="Edit details" />
        <EditTextPreference
            app:dependency="edit_details"
            app:key="username"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dependency="edit_details"
            app:key="password"
            app:title="@string/password"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dependency="edit_details"
            app:key="mail"
            app:title="@string/email"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Job Details">
        <SwitchPreferenceCompat
            app:key="edit_job"
            app:title="Edit job details" />
        <EditTextPreference
            app:dependency="edit_job"
            app:key="total_days"
            app:title="Total days"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dependency="edit_job"
            app:key="fee_per_hour"
            app:title="Fee per hour"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dependency="edit_job"
            app:key="debt"
            app:title="Debt"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="Sync app"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>